src/index.css
/* ... */
.featured-technologies p {
  font-size: 0.5rem;
}

.featured-buttons {
  display: flex;
  column-gap: 0.7rem;
}

.featured-buttons button {
  font-size: 0.6rem;
  padding: 0.2rem 01rem;
}
/* first and third featured project buttons */
.fp1 .featured-buttons,
.fp3 .featured-buttons {
  justify-content: flex-end;
}

.other-projects-header {
  margin: 6rem auto 1rem auto;
  font-size: 1.2rem;
  font-family: "Fira Sans", Helvetica, sans-serif;
  display: flex;
  justify-content: center;
  width: 100vw;
}

.project-item {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 20rem;
  background-color: var(--secondary);
  border-radius: 10px;
  padding: 6px;
  max-width: 75vw;
}

.project-thumbnail img {
  border-radius: 10px;
  box-shadow: 3px 3px 10px #bbbbbb;
  width: 12rem;
}

.project-thumbnail img:hover {
  box-shadow: 3px 3px 10px var(--light);
}

.project-thumbnail img:active {
  box-shadow: 1px 1px 10px var(--light);
  transform: translate(2px, 2px);
}

.project-text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.project-text a {
  text-decoration: none;
}

.project-text h1:hover {
  color: var(--light);
}

.project-text h1 {
  text-align: center;
  font-size: 1.3rem;
  color: #dddddd;
}

.project-description {
  display: flex;
  flex-direction: row;
  column-gap: 2rem;
  line-height: 1.2rem;
  max-width: 80vw;
  flex-wrap: wrap;
  justify-content: center;
  color: var(--tertiary);
  font-size: 0.8rem;
  margin-top: 0.5rem;
  font-family: "Fira Code", Courier, monospace;
}

.project-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  column-gap: 1rem;
  width: 90vw;
  margin-top: 0.5rem;
}

.project-buttons button {
  width: 7rem;
  padding: 0.4rem 0.2rem;
  font-size: 0.8rem;
}

/* SKILLS PAGE */

.skills {
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 8rem 0;
  background-image: url('./assets/topography-background.svg');
}

.skills-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 3rem;
}

.skills h1 {
  text-align: left;
  color: var(--light);
  letter-spacing: 0.09rem;
  margin-bottom: 2.5rem;
  padding-top: 10%;
  font-size: 1.5rem;
  position: relative;
  width: 80vw;
}

.skills h1::after {
  content: " ";
  display: block;
  height: 0.1px;
  width: 100px;
  position: absolute;
  top: 75%;
  right: 0;
  background: var(--light);
  opacity: 70%;
}

.skills p {
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: left;
  color: var(--tertiary);
  letter-spacing: 0.075rem;
  background-color: var(--primary);
  width: 80vw;
  margin-bottom: 1rem;
}

.skills a {
  text-decoration: none;
  color: var(--light);
}

.skills a:hover {
  text-decoration: underline;
}

.skills-body {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 2.5rem;
  row-gap: 1.5rem;
  width: 80vw;
}

.skills-item {
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.7rem;
  color: #ddd;
}

.skills-icon {
  width: 1.8rem;
  height: 1.8rem;
}

/* CONTACT PAGE */

.contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 8rem 0;
}

.contact-text,
.contact-info {
  text-align: center;
  max-width: 85vw;
}

.contact h1 {
  color: var(--light);
  letter-spacing: 0.09rem;
  margin-bottom: 2rem;
  font-size: 1.5rem;
  padding-top: 10%;
  position: relative;
  width: 80vw;
  text-align: left;
}

.contact h1::after {
  content: " ";
  display: inline;
  height: 0.1px;
  width: 140px;
  position: absolute;
  top: 75%;
  right: 0;
  background: var(--light);
  opacity: 70%;
}

.contact p {
  font-size: 1rem;
  line-height: 1.5rem;
  color: var(--tertiary);
  letter-spacing: 0.075rem;
  text-align: left;
  width: 80vw;
}

.contact-text p {
  padding-bottom: 1.5rem;
}

.contact-info {
  border-top: 2px solid var(--secondary);
  padding: 1.5rem 0;
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
}

.contact-email {
  color: #cccccc;
}

.contact-email a {
  text-decoration: underline;
  color: var(--light);
}

button {
  background-color: transparent;
  border: 1px solid var(--light);
  padding: 0.3rem 2.5rem;
  color: var(--light);
  font-size: 1rem;
  font-family: 'Fira Sans', Helvetica, sans-serif;
  border-radius: 5px;
  margin-top: 0.75rem;
  align-self: end;
}

button:hover {
  cursor: pointer;
  background-color: var(--light);
  color: var(--primary);
  transition: background-color 120ms linear, color 120ms linear;
}


/* FOOTER */

.footer-container {
  background-color: var(--primary);
  width: 100%;
  height: 10vh;
  color: var(--tertiary);
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  bottom: 0;
}

.footer-links {
  width: 60vw;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.footer-icon {
  height: 1.2rem;
  width: 1.2rem;
}

.footer-links a {
  text-decoration: none;
  color: var(--light);
  transition: all 200ms ease-in-out;
  animation-duration: 0.75s;
  animation-name: animate-fade-up;
  animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
  animation-fill-mode: both;
}

.footer-links a:nth-child(1) {
  animation-delay: 1.3s;
}

.footer-links a:nth-child(2) {
  animation-delay: 1.4s;
}

.footer-links a:nth-child(3) {
  animation-delay: 1.5s;
}

.footer-links a:nth-child(4) {
  animation-delay: 1.6s;
}

.footer-links a:hover {
  color: var(--tertiary);
  transform: translateY(-5px);
}

.footer-links a:active {
  color: var(--tertiary);
}

/* ACCESSIBILITY PREFERENCE TO REDUCE ANIMATION */

@media only screen and (prefers-reduced-motion: reduce) {
  .animate { animation: none !important; }
}
/* ... */

